apps/blueprint-auth/overlays/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blueprint-auth-frontend
spec:
  ingressClassName: traefik
  rules:
    - host: auth.blueprint-qa.ionflux.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blueprint-auth-frontend
                port:
                  number: 80
